--- a/html/watermelon.html
+++ b/html/watermelon.html
@@ -3,44 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <title>Node</title>
 </head>
 <body>
     <header>
         <div class="banner">
-            <img src="./images/welcome-banner.png">
+            <img src="../images/watermelon-banner.png">
         </div>
     </header>
 
     <div class="sidebar">
         <ul>
             <li>
-                <img class="icon" src="./images/rabbit-pointing.png">
-                <a href="./html/watermelon.html">
-                    <button>Watermelon</button>
+                <img class="icon" src="../images/rabbit-pointing.png">
+                <a href="../index.html">
+                    <button>Home</button>
                 </a>
             </li>
             <li>
-                <img class="icon" src="./images/rabbit-pointing.png">
-                <a href="./html/corgi.html">
+                <img class="icon" src="../images/rabbit-pointing.png">
+                <a href="../html/corgi.html">
                     <button>Corgi</button>
                 </a>
             </li>
             <li>
-                <img class="icon" src="./images/rabbit-pointing.png">
-                <a href="./html/space.html">
+                <img class="icon" src="../images/rabbit-pointing.png">
+                <a href="../html/space.html">
                     <button>Space</button>
                 </a>
             </li>
             <li>
-                <img class="icon" src="./images/rabbit-pointing.png">
-                <a href="./html/pride.html">
+                <img class="icon" src="../images/rabbit-pointing.png">
+                <a href="../html/pride.html">
                     <button>Pride</button>
                 </a>
             </li>
         </ul>
     </div>
-    
+
 </body>
 </html>
