added text and images, fixed html

--- a/html/corgi.html
+++ b/html/corgi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/corgi.css">
     <title>Node</title>
 </head>
 <body>
@@ -39,6 +40,26 @@
                     <button>Pride</button>
                 </a>
             </li>
+        </ul>
+    </div>
+
+    <div class="facts-list">
+        <h1>Facts about corgi</h1>
+        <ul>
+            <p><h3>1. The Dog’s Ancestors Date Back to the 10th Century</h3>
+                According to the Pembroke Welsh Corgi Club of America, it is believed that the Pembroke Welsh Corgi’s ancestry dates back to at least the 10th century. It is unknown, however, whether they are descended from the Swedish Vallhunds that were possibly brought to Pembrokeshire by the Vikings, or from the ancestors of the present-day Schipperkes and Pomeranians brought to Wales by Flemish weavers.</p>
+
+                <p><h3>2. Legend Has It, They Are “Enchanted” Dogs</h3>
+                    Welsh legend says the fairies and elves of Wales used the Pembroke Welsh Corgi to pull fairy coaches, work fairy cattle, and serve as the steed for fairy warriors. If you look closely, even today you can see the marks of the “fairy saddle” over the shoulders in the Pembroke’s coat.</p>
+
+                <p><h3>3. They Are Very Different From the Cardigan Welsh Corgi</h3>
+                    In 1934, the AKC recognized the Pembroke and the Cardigan Welsh Corgi as two distinct breeds. What is different between the Pembroke and the Cardigan? First, the Cardigan traces its origins to Cardiganshire, and the Pembroke to Pembrokeshire—two different counties in Wales. The dogs also have easily identifiable physical differences. The Cardigan has a longer tail, while the Pembroke’s is docked close to the body. The Pembroke has a shorter body, and the ears are pointed, while the Cardigan’s ears are more rounded at the tips.</p>
+
+                <p><h3>4. They’ll Be Your Best Friend and a Great Competitor</h3>
+                    The Pembroke Welsh Corgi is known as one of the most agreeable small house dogs and is a loyal, loving pet for families. They also are known for their intelligence and enthusiasm for working. Many Pembrokes compete in dog sports, such as agility, herding, conformation, obedience, and more.</p>
+                    
+                <p><h3>5. Corgi Means “Dwarf Dog” in Welsh</h3>
+                    Or at least it might. The origin of the name “Corgi” is difficult to determine. Some say it combines the Welsh word “cor,” which means to watch over or gather, with “gi,” a form of the Welsh word for dog. Others have the interpretation that the word “cor” means dwarf, and combine that with “gi,” you have “dwarf dog.”</p>
         </ul>
     </div>
 
