--- a/html/pride.html
+++ b/html/pride.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/pride.css">
     <title>Node</title>
 </head>
 <body>
@@ -39,6 +40,31 @@
                     <button>Space</button>
                 </a>
             </li>
+        </ul>
+    </div>
+
+    <div class="facts-list">
+        <h1>Facts about pride</h1>
+        <ul>
+            <p><h3>1. The iconic rainbow flag was designed in 1978</h3>
+                The first pride fact is on the history of the iconic rainbow flag! Gilbert Baker created the Rainbow Flag, the international symbol of LGBTQ+ communities in 1978. It was originally eight colours, but it was later reduced to six – red, orange, yellow, green, blue, and violet – by removing hot pink and blending turquoise and indigo into royal blue.
+                Baker was a revered drag queen and an openly gay man who later revealed that Harvey Milk, one of the first openly gay elected officials in the United States, appointed him to create a gay pride symbol.</p>
+
+                <p><h3>2. Every colour on the flag has its own meaning</h3>
+                    There’s no denying that the rainbow flag is one of the most recognisable symbols of the LGBTQ+ community. But what are the meanings of each of its colours?
+                    The original flag featured eight colours, each with its own meaning. Red symbolises life, orange represents healing, pink portrays sexuality, yellow stands for sunlight, green depicts nature, turquoise represents creativity, indigo displays harmony, and violet illustrates spirit.</p>
+
+                <p><h3>3. June represents the Stonewall Riots</h3>
+                    June is the month in which the Stonewall Riots of 1969 are commemorated. The Stonewall Inn, a well-known gay club in New York’s Greenwich Village, was raided by the New York City police on June 28, 1969.
+                    This provoked a wave of protests and violent conflicts in local bars and neighbourhoods, serving as a catalyst for the global gay rights movement.
+                    The first official Pride parade took place the following year on Christopher Street Liberation Day on the anniversary of the Stonewall Riots. Following that, in 1971, cities all around the world held Pride marches and celebrations.</p>
+
+                <p><h3>4. The largest pride parade is in Sao Paulo</h3>
+                    When it comes to Pride, São Paulo takes the crown as the ultimate party spot. While folks often flock to Rio de Janeiro in Brazil, São Paulo hosts the world's largest Pride parade, giving Carnival a run for its money. 
+                    In 1997, the shindig kicked off with just 2,000 people, but nowadays, you can expect a whopping 3 to 5 million attendees each year. This wild bash happens Sunday after Corpus Christi, starting at 12 p.m. on June 19 outside the São Paulo Museum of Art. Don't forget to wear your most comfortable shoes for a lively march down Avenida Paulista, filled with flags, floats, costumes, and killer tunes. But hey, the fun doesn't stop there! Pride celebrations kick off a week earlier in hotspots like Frei Caneca, Jardin, and Largo do Arouche. </p>
+                    
+                <p><h3>5. Brenda Howard, a bisexual woman, is considered the “Mother of Pride”</h3>
+                    Did you know Brenda Howard was pivotal in shaping the modern LGBTQIA+ Pride movement? To commemorate the first anniversary of the Stonewall Uprising, Howard organized the Christopher Street Liberation Day March. This march eventually evolved into the New York City Pride Parade! Her legacy in organizing events and advocating for LGBTQIA+ rights and activism as the Mother of Pride inspires generations to stand up, unite, and fight for equality.</p>
         </ul>
     </div>
 
