--- a/html/watermelon.html
+++ b/html/watermelon.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/watermelon.css">
     <title>Node</title>
 </head>
 <body>
@@ -39,6 +40,26 @@
                     <button>Pride</button>
                 </a>
             </li>
+        </ul>
+    </div>
+
+    <div class="facts-list">
+        <h1>Facts about watermelon</h1>
+        <ul>
+            <p><h3>1. Watermelon is both a fruit and a vegetable.</h3>
+                Thanks to their sweet taste, watermelons are commonly considered a fruit. And they do grow like fruit, originating from flowers that have been pollinated by bees, and, from a botanical perspective, they’re fruits because they contain seeds. But many gardeners think of them as vegetables, since they grow them in their gardens alongside other summer veggies like peas and corn. Technically, watermelon is classified as part of a botanical family of gourds that includes other culinary vegetables like cucumber, squash, and pumpkin.</p>
+
+                <p><h3>2. They’re called watermelons for a reason.</h3>
+                    They’re 92 percent water, making them a perfect refresher for those hot summer months.</p>
+
+                <p><h3>3. Seedless watermelons are not genetically engineered.</h3>
+                    Contrary to what you might have heard, seedless watermelons are the result of hybridization, a perfectly natural phenomenon that farmers can nevertheless capitalize on. A couple of decades ago, seedless watermelons were hard to find, but today they make up around 85 percent of those sold in the U.S. And those white “seeds” that you still find in your seedless slices? They’re actually empty seed coats and are perfectly safe to eat.</p>
+
+                <p><h3>4. Watermelons contain an anti-cancer compound.</h3>
+                    Watermelons are the best source of lycopene, an antioxidant that’s been shown to reduce the risk for several types of cancers, cardiovascular disease, and macular degeneration.</p>
+                    
+                <p><h3>5. A South Carolina family has grown an heirloom variety of watermelon for almost a century.</h3>
+                    The unusually sweet Bradford—created by Nathaniel Napoleon Bradford in Sumter County, South Carolina, in the 1840s—was one of the most sought-after varieties of watermelon the South has ever seen. But its soft skin made it hard to transport, and by the early 1920s it had proved to be commercially unviable. It would have disappeared completely had the Bradford family not kept it alive in their backyard gardens for multiple generations. It’s now being grown commercially again by Nat Bradford, Nathaniel’s great-great-great grandson.</p>
         </ul>
     </div>
 
