--- a/html/space.html
+++ b/html/space.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/space.css">
     <title>Node</title>
 </head>
 <body>
@@ -39,6 +40,29 @@
                     <button>Pride</button>
                 </a>
             </li>
+        </ul>
+    </div>
+
+    <div class="facts-list">
+        <h1>Facts about space</h1>
+        <ul>
+            <p><h3>1. In 3.75 billion years the Milky Way and Andromeda galaxies will collide.</h3>
+                The Andromeda Galaxy is approaching the Milky Way–where our solar system is–at a rate of around 110 kilometers per second (68 mi/s) and eventually the two will collide to form a giant elliptical galaxy.</p>
+
+                <p><h3>2. The gas giant Jupiter is a failed star.</h3>
+                    Jupiter, the largest planet in the solar system, is composed of hydrogen and helium. These are the same elements that our Sun is made up of. However, Jupiter is not large enough to start nuclear fusion and generate its own energy. If it were around 80 times bigger, it would become a star with low mass.
+                    Another fun fact about Jupiter is that it has a storm called the Great Red Spot. It has been swirling for more than a hundred years.</p>
+
+                <p><h3>3. There are more stars in the universe than all the grains of sand on Earth.</h3>
+                    If we combined all the sand on the beaches and deserts in the world, there would still be 10 times more stars in the universe. It is estimated that there are 70 sextillion stars out there. This figure translates to 70 followed by 22 zeros or 70,000,000,000,000,000,000,000 stars!</p>
+
+                <p><h3>4. When you look at a star, what you actually see is how it was in the past.</h3>
+                    Light takes time to reach Earth. For instance, sunlight takes about 8.5 minutes to reach the Earth’s surface. The bright star, Sirius, for example, is roughly 8.6 light-years away. That means when you see it in the sky tonight, you are actually seeing Sirius the way it was 8.6 years ago!</p>
+                    
+                <p><h3>5. The Sun will engulf Earth 5 billion years from now.</h3>
+                    The Sun is still a main-sequence star now. It generates energy by turning hydrogen into helium. As it turns into a red giant, it would become bigger and brighter. When our Sun reaches this stage, its expansion would likely reach the orbit of the red planet Mars.
+
+Though the Sun is not yet a red giant, it is still much bigger than the Earth. In fact, about one million Earths can fit inside the Sun.</p>
         </ul>
     </div>
 
